[metadata]
name = simplenet
url = https://github.com/n8henrie/simplenet
version = attr: simplenet.__version__
license = MIT
license_files = LICENSE
description = A simple neural network in Python
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Nathan Henrie
author_email = nate@n8henrie.com
keywords = simplenet
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    numpy==1.22.4

[options.extras_require]
test =
    black==22.3.0
    flake8-docstrings==1.6.0
    flake8-import-order==0.18.1
    mypy==0.961
    pep8-naming==0.13.0
    pylint==2.14.3
    pytest==7.1.2
    tensorflow-cpu==2.9.1; platform_system == 'Linux'
    tensorflow-macos==2.9.1; platform_system == 'Darwin'
    tox==3.25.0
dev =
    build==0.8.0
    docutils==0.14
    pypandoc==1.8.1
    recommonmark==0.7.1
    sphinx-rtd-theme==1.0.0
    Sphinx==5.0.2
    twine==4.0.1

[options.packages.find]
where=src
